Edited wiki page through web user interface.

--- a/wiki/Talapatram.wiki
+++ b/wiki/Talapatram.wiki
@@ -1,13 +1,23 @@
-#Talapatram - Indian Languages Editing and Keyboard Layout Software
+#labels Featured,Phase-Design,Phase-Support
+Talapatram - Indian Languages Editing and Keyboard Layout Software
 
 = Introduction =
 
-Add your content here.
+Talapatram is a Indian Languages editing software with a provision to type in 11 of the Indian languages (+ English) with on-screen dynamic keyboard layouts.
 
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+It is a virtual keyboard which overlays a virtual keyboard layout on your current English keyboard and lets you type in Bengali, English, Farsi, Gujarati, Hindi, Kannada, Malayalam, Marathi, Punjabi, Tamil, Telugu and Urdu OR in any combination of the above languages.
+
+Keyboard layouts that it uses are standard keyboard layouts specified by the ISO. Text typed can be saved as simple text files with UTF-8 encoding which can be ported to any platform and can be copied to and used in any other application.
+
+It is not a transliterator. It is a desktop application which lets you type as people used to do using type-writing machines in olden days, with keyboard layouts almost similar to them, which are standardised.
+
+It is a Windows based C++ - MFC application developed using MS VS.net 2003.
+
+= Requirements =
+*Unicode fonts*.
+_Microsoft XP/ Office XP/ Windows 2000 by default ship with Unicode fonts for almost all of the Indian Languages._
+
+See http://www.funnotes.net/tofpages/TopicOfFortnight.php?tofTpcFl=topicoffortnight40 which has been created using Talapatram. If you see contents of this page in your browser then Hindi Unicode fonts are installed on your machine!
